--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     ports:
     - 127.0.0.1:27017:27017
   exporter:
-    image: repo.p246.dev/patrick246/mongodb-query-exporter:1.1.0
+    image: patrick246/mongodb-query-exporter:latest
     command: >-
       --mongodb-uri=mongodb://mongodb:27017
       --config-path=/data/*.json
